login/src/main/java/com/example/login/global/error/BusinessException.java
package com.example.login.global.error;

import lombok.*;

@Getter
@RequiredArgsConstructor
public class BusinessException extends RuntimeException {

    private final ErrorCode errorCode;

}
